--- a/ch/package.json
+++ b/ch/package.json
@@ -21,15 +21,18 @@
     "@payloadcms/next": "^3.0.0-beta.60",
     "@payloadcms/plugin-cloud": "^3.0.0-beta.60",
     "@payloadcms/richtext-lexical": "^3.0.0-beta.60",
+    "@tailwindcss/typography": "^0.5.13",
     "cross-env": "^7.0.3",
     "framer-motion": "^12.0.0-alpha.0",
     "graphql": "^16.8.1",
     "lucide-react": "^0.400.0",
     "mux.js": "^6.3.0",
-    "next": "15.0.0-rc.0",
+    "next": "^15.0.0-rc.0",
     "payload": "^3.0.0-beta.60",
-    "react": "^19.0.0-rc-f994737d14-20240522",
-    "react-dom": "^19.0.0-rc-f994737d14-20240522",
+    "react": "^19.0.0-rc-df5f2736-20240712",
+    "react-dom": "^19.0.0-rc-df5f2736-20240712",
+    "react-helmet": "^6.1.0",
+    "shaka-player": "^4.10.5",
     "sharp": "0.32.6"
   },
   "devDependencies": {
@@ -37,6 +40,7 @@
     "@types/node": "^20.12.12",
     "@types/react": "npm:types-react@19.0.0-beta.2",
     "@types/react-dom": "npm:types-react-dom@19.0.0-beta.2",
+    "@types/react-helmet": "^6.1.11",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "daisyui": "^4.12.10",
@@ -46,6 +50,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "fs": "^0.0.1-security",
     "postcss": "^8.4.38",
+    "react-transition-group": "^4.4.5",
     "tailwindcss": "^3.4.4",
     "typescript": "5.5.2"
   },
