--- a/ch/tsconfig.json
+++ b/ch/tsconfig.json
@@ -37,7 +37,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "src/app/(app)/v/[name]/season/[seasonNumber]/[id]/v.tsx.bk"  ],
   "exclude": [
     "node_modules"
   ]
