--- a/ch/package.json
+++ b/ch/package.json
@@ -14,6 +14,7 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
+    "@mux/mux-player": "^2.8.0",
     "@nextui-org/image": "^2.0.29",
     "@nextui-org/react": "^2.4.2",
     "@nextui-org/system": "^2.2.2",
@@ -29,13 +30,21 @@
     "mux.js": "^6.3.0",
     "next": "^15.0.0-rc.0",
     "payload": "^3.0.0-beta.60",
-    "react": "^19.0.0-rc-df5f2736-20240712",
-    "react-dom": "^19.0.0-rc-df5f2736-20240712",
+    "react": "^19.0.0-rc-512b09b2-20240718",
+    "react-dom": "^19.0.0-rc-512b09b2-20240718",
     "react-helmet": "^6.1.0",
+    "react-player": "^2.16.0",
+    "redux": "^5.0.1",
     "shaka-player": "^4.10.5",
-    "sharp": "0.32.6"
+    "sharp": "0.32.6",
+    "video-react": "^0.16.0"
   },
   "devDependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/layout": "^2.3.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.12.0",
+    "@emotion/styled": "^11.12.0",
     "@types/fluent-ffmpeg": "^2.1.24",
     "@types/node": "^20.12.12",
     "@types/react": "npm:types-react@19.0.0-beta.2",
