--- a/chh/.env.example
+++ b/chh/.env.example
@@ -1,2 +1,7 @@
-DATABASE_URI=mongodb://127.0.0.1/payload-template-blank-3-0
-PAYLOAD_SECRET=YOUR_SECRET_HERE
+POSTGRES_URI=postgres://hooleymass:stellarm@127.0.0.1:5432/chikii
+PAYLOAD_SECRET=48f460f206ee153a760a956f
+PAYLOAD_PUBLIC_SERVER_URL=http://localhost:3000
+MONGODB_URI=mongodb+srv://hooleymass:stellarm@atlascluster.9j6zu78.mongodb.net/chikiimass
+# PAYLOAD_SECRET=48f460f206ee153a760a956f
+# PAYLOAD_PUBLIC_URL=https://chikii.uber.space  
+# PAYLOAD_PUBLIC_SERVER_URL=https://chikii.uber.space
