--- a/chh/package.json
+++ b/chh/package.json
@@ -29,6 +29,7 @@
     "react": "^19.0.0-rc-6230622a1a-20240610",
     "react-dom": "^19.0.0-rc-6230622a1a-20240610",
     "react-error-boundary": "^4.0.13",
+    "react-hls-player": "^3.0.7",
     "sharp": "0.32.6",
     "styled-components": "^6.1.12",
     "styled-reset": "^4.5.2",
