--- a/chh/package.json
+++ b/chh/package.json
@@ -14,13 +14,16 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@payloadcms/db-mongodb": "^3.0.0-beta.67",
     "@payloadcms/db-postgres": "beta",
     "@payloadcms/next": "beta",
     "@payloadcms/plugin-cloud": "beta",
     "@payloadcms/richtext-lexical": "beta",
+    "axios": "^1.7.2",
     "cross-env": "^7.0.3",
     "daisyui": "^4.12.10",
+    "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^11.3.8",
     "graphql": "^16.8.1",
     "hls.js": "^1.5.13",
@@ -38,6 +41,7 @@
   "devDependencies": {
     "@swc/core": "^1.7.3",
     "@tailwindcss/typography": "^0.5.13",
+    "@types/fluent-ffmpeg": "^2.1.24",
     "@types/node": "^20.12.12",
     "@types/react": "npm:types-react@19.0.0-rc.0",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.0",
